Introduce layered architecture and core projects
Added SedimentCore.Domain and SedimentCore.Analysis projects with core scientific data models and analysis logic. Refactored solution structure to src/ and tests/ folders, updated solution file, and migrated UI project. Updated the README and added a developer guide. Established separation of domain, analysis, and UI layers for maintainability and extensibility.

--- a/src/SedimentCoreApp.UI/SedimentCoreApp.UI.csproj
+++ b/src/SedimentCoreApp.UI/SedimentCoreApp.UI.csproj
@@ -23,4 +23,9 @@
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SedimentCore.Domain\SedimentCore.Domain.csproj" />
+    <ProjectReference Include="..\SedimentCore.Analysis\SedimentCore.Analysis.csproj" />
+  </ItemGroup>
 </Project>
